--- a/index.html
+++ b/index.html
@@ -627,16 +627,16 @@
       </div>
 
       <!-- slideshow -->
-      <!-- <div class="slideshow-container" data-aos="fade-up"> -->
+       <div class="slideshow-container" data-aos="fade-up">
 
       <!-- Next and previous buttons -->
-      <!-- <div class="destination__nav">
+      <div class="destination__nav">
       <span onclick="pullSlide(-1)"><i class="ri-arrow-left-s-line"></i></span>
       <span onclick="pullSlide(1)"><i class="ri-arrow-right-s-line"></i></span>
-    </div> -->
+    </div> 
 
       <!-- Full-width images with number and caption text -->
-      <!-- <div class="mySlides">
+       <div class="mySlides">
       <img src="./img/eiffelTower.webp" style="width:100%">
     </div>
 
@@ -657,7 +657,7 @@
           <span></span>
           <span></span>
         </div>
-      </div> -->
+      </div> 
 
       <div class="outer-box">
         <div class="containers">
