--- a/dedicated destinations/Agra_Fort/agra.html
+++ b/dedicated destinations/Agra_Fort/agra.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -68,9 +69,14 @@
                 <p>
 
 
-                    Most preferred meals at Agra Fort station for lunch and dinner include local specialities such as veg deluxe thali, aalu paratha, chicken, khichdi, Biryani, and veg fried rice. <br> <br> Favourite breakfast includes poha, Kulcha, omelette,
-                    chole bhature, among others. For desserts, you can order jalebi, lassi, kulfi, imarti, rabri and many more sweet dishes. Train food delivery at Agra Fort station includes local delicacies and a wide variety of meals from famous local
-                    eateries at Agra Fort station from premium outlets such as: FLAVOURS FOOD PUNJABI CHULHA and many more local eateries
+                    Most preferred meals at Agra Fort station for lunch and dinner include local specialities such as
+                    veg deluxe thali, aalu paratha, chicken, khichdi, Biryani, and veg fried rice. <br> <br> Favourite
+                    breakfast includes poha, Kulcha, omelette,
+                    chole bhature, among others. For desserts, you can order jalebi, lassi, kulfi, imarti, rabri and
+                    many more sweet dishes. Train food delivery at Agra Fort station includes local delicacies and a
+                    wide variety of meals from famous local
+                    eateries at Agra Fort station from premium outlets such as: FLAVOURS FOOD PUNJABI CHULHA and many
+                    more local eateries
 
 
                 </p>
@@ -98,16 +104,25 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14197.011673240004!2d78.00515893828727!3d27.179786553832898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397470d41a5c0cbd%3A0xb7b1347b0dee579d!2sAgra%20Fort%2C%20Rakabganj%2C%20Agra%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1717407623757!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14197.011673240004!2d78.00515893828727!3d27.179786553832898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397470d41a5c0cbd%3A0xb7b1347b0dee579d!2sAgra%20Fort%2C%20Rakabganj%2C%20Agra%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1717407623757!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    The Agra Fort <strong>(Qila Agra)</strong> is a historical fort in the city of Agra, and also known as Agra's Red Fort. Mughal emperor Humayun was crowned at this fort in 1530. It was later renovated by the Mughal emperor Akbar from
-                    1565 and the present-day structure was completed in 1573. It served as the main residence of the rulers of the Mughal dynasty until 1638, when the capital was shifted from Agra to Delhi. It was also known as the <strong>"Lal-Qila" or "Qila-i-Akbari"</strong>                    . <br> Before being captured by the British, the last Indian rulers to have occupied it were the Marathas. In 1983, the Agra fort was inscribed as a UNESCO World Heritage Site because of its importance during the Mughal Dynasty. It
-                    is about 2.5 kilometers (1.6 mi) northwest of its more famous sister monument, the Taj Mahal. The fort can be more accurately described as a walled city. It was later renovated by Shah Jahan.
+                    The Agra Fort <strong>(Qila Agra)</strong> is a historical fort in the city of Agra, and also known
+                    as Agra's Red Fort. Mughal emperor Humayun was crowned at this fort in 1530. It was later renovated
+                    by the Mughal emperor Akbar from
+                    1565 and the present-day structure was completed in 1573. It served as the main residence of the
+                    rulers of the Mughal dynasty until 1638, when the capital was shifted from Agra to Delhi. It was
+                    also known as the <strong>"Lal-Qila" or "Qila-i-Akbari"</strong> . <br> Before being captured by the
+                    British, the last Indian rulers to have occupied it were the Marathas. In 1983, the Agra fort was
+                    inscribed as a UNESCO World Heritage Site because of its importance during the Mughal Dynasty. It
+                    is about 2.5 kilometers (1.6 mi) northwest of its more famous sister monument, the Taj Mahal. The
+                    fort can be more accurately described as a walled city. It was later renovated by Shah Jahan.
 
                 </p>
             </div>
@@ -146,7 +161,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -169,11 +187,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
