--- a/dedicated destinations/Andaman/a.html
+++ b/dedicated destinations/Andaman/a.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/The_Coral_Reef_at_the_Andaman_Islands.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/The_Coral_Reef_at_the_Andaman_Islands.jpg"
+                    alt="trip" height="250" width="45" alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -65,10 +67,14 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> About their Food </h3>
-                <p> Fish curry and maacher jhol are the famous food of Andaman that will introduce you to a mouth-watering fish recipe that was originated in West Bengal with all the rich flavors of spices like chilies, coriander, and turmeric powder with
+                <p> Fish curry and maacher jhol are the famous food of Andaman that will introduce you to a
+                    mouth-watering fish recipe that was originated in West Bengal with all the rich flavors of spices
+                    like chilies, coriander, and turmeric powder with
                     many other spices making it extremely delicious.
                     <br> <br>
-                    <strong>Macher Jhol</strong> is a Bengali fish curry that is very popular in the Andaman & Nicobar Islands. It is made with fresh fish, and the gravy is usually thin and light. Using freshly cut coriander, turmeric powder, garam masala,
+                    <strong>Macher Jhol</strong> is a Bengali fish curry that is very popular in the Andaman & Nicobar
+                    Islands. It is made with fresh fish, and the gravy is usually thin and light. Using freshly cut
+                    coriander, turmeric powder, garam masala,
                     and a few green chilies, this dish has a rich, flavorful finish.
                 </p>
 
@@ -98,15 +104,23 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4020949.787847431!2d90.5892894368925!3d10.204288189239103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3064a00f2b650ff3%3A0xce80055648fccb2c!2sAndaman%20and%20Nicobar%20Islands!5e0!3m2!1sen!2sin!4v1717737314875!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4020949.787847431!2d90.5892894368925!3d10.204288189239103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3064a00f2b650ff3%3A0xce80055648fccb2c!2sAndaman%20and%20Nicobar%20Islands!5e0!3m2!1sen!2sin!4v1717737314875!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
-                <p> The Andaman and Nicobar Islands is a union territory of India. It consists of 836 islands (of which only 31 are inhabited) grouped into two island groups: the northern Andaman Islands and the southern Nicobar Islands, separated by a 150
-                    km (93 mi) wide channel. Port Blair is the capital and largest city of the territory, located about 1,190 km (740 mi) from Chennai and 1,255 km (780 mi) from Kolkata in mainland India. <br> The islands are sandwiched between the Bay
-                    of Bengal to the west and the Andaman Sea to the east with the northern-most point located 901 km (560 mi) from the mouth of Hooghly river. Indira Point at 6°45’10″N and 93°49’36″E at the southern tip of Great Nicobar is the southernmost
+                <p> The Andaman and Nicobar Islands is a union territory of India. It consists of 836 islands (of which
+                    only 31 are inhabited) grouped into two island groups: the northern Andaman Islands and the southern
+                    Nicobar Islands, separated by a 150
+                    km (93 mi) wide channel. Port Blair is the capital and largest city of the territory, located about
+                    1,190 km (740 mi) from Chennai and 1,255 km (780 mi) from Kolkata in mainland India. <br> The
+                    islands are sandwiched between the Bay
+                    of Bengal to the west and the Andaman Sea to the east with the northern-most point located 901 km
+                    (560 mi) from the mouth of Hooghly river. Indira Point at 6°45’10″N and 93°49’36″E at the southern
+                    tip of Great Nicobar is the southernmost
                     point of India.
                 </p>
             </div>
@@ -145,7 +159,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -168,11 +185,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
