--- a/dedicated destinations/Australia/Australia.html
+++ b/dedicated destinations/Australia/Australia.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="../../img/joey-csunyo-2EGuIR00UTk-unsplash.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="../../img/joey-csunyo-2EGuIR00UTk-unsplash.jpg" alt="trip" height="250" width="45" alt=""
+                    class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -65,12 +67,22 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> About their Food </h3>
-                <p> <strong>Roast lamb</strong> has been declared Australia's national dish in a major poll that shows we're still a country of meat eaters at heart. The poll, held on News Ltd websites across all mainland capitals, attracted more than 24,000
+                <p> <strong>Roast lamb</strong> has been declared Australia's national dish in a major poll that shows
+                    we're still a country of meat eaters at heart. The poll, held on News Ltd websites across all
+                    mainland capitals, attracted more than 24,000
                     votes.
-                    <br> <br> Australia's culinary landscape is a vibrant blend of traditional indigenous foods, multicultural influences, and local produce. Indigenous ingredients, often referred to as "bush tucker," include unique items like witchetty
-                    grubs, kangaroo meat, and bush tomatoes, offering a taste of Australia’s deep-rooted heritage. Macadamia nuts, native to Australia, are a popular addition to both sweet and savory dishes. <br> <br> Meat pies, another beloved staple,
-                    feature flaky pastry filled with minced meat and are enjoyed across the country. Seafood also plays a crucial role, with fresh catches like barramundi and prawns being highlights, particularly in coastal regions. The multicultural
-                    fabric of Australia is evident in its diverse food scene, where Asian, Mediterranean, and Middle Eastern influences have seamlessly integrated, resulting in a rich array of flavors and culinary experiences. From beachside barbecues
+                    <br> <br> Australia's culinary landscape is a vibrant blend of traditional indigenous foods,
+                    multicultural influences, and local produce. Indigenous ingredients, often referred to as "bush
+                    tucker," include unique items like witchetty
+                    grubs, kangaroo meat, and bush tomatoes, offering a taste of Australia’s deep-rooted heritage.
+                    Macadamia nuts, native to Australia, are a popular addition to both sweet and savory dishes. <br>
+                    <br> Meat pies, another beloved staple,
+                    feature flaky pastry filled with minced meat and are enjoyed across the country. Seafood also plays
+                    a crucial role, with fresh catches like barramundi and prawns being highlights, particularly in
+                    coastal regions. The multicultural
+                    fabric of Australia is evident in its diverse food scene, where Asian, Mediterranean, and Middle
+                    Eastern influences have seamlessly integrated, resulting in a rich array of flavors and culinary
+                    experiences. From beachside barbecues
                     to fine dining, Australia's food culture is as diverse and dynamic as its people.
                 </p>
 
@@ -100,17 +112,27 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29727335.32892246!2d111.80389919025055!3d-24.560704950281977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2b2bfd076787c5df%3A0x538267a1955b1352!2sAustralia!5e0!3m2!1sen!2sin!4v1717737992864!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29727335.32892246!2d111.80389919025055!3d-24.560704950281977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2b2bfd076787c5df%3A0x538267a1955b1352!2sAustralia!5e0!3m2!1sen!2sin!4v1717737992864!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
-                <p>Australia is known for many things, including swathes of tropical beaches, marine reserves, Aboriginal culture, cute koalas, rolling wine country, and lush rainforests.
-                    <br> Australia, officially the <strong>Commonwealth of Australia</strong>, is a sovereign country comprising the mainland of the Australian continent, the island of Tasmania, and numerous smaller islands. Australia is the largest country
-                    by area in Oceania and the world's sixth-largest country. Australia has a highly developed market economy and one of the highest per capita incomes globally. It is a middle power, and has the world's thirteenth-highest military expenditure.
-                    It is a member of international groups including the United Nations; the G20; the OECD; the World Trade Organization; Asia-Pacific Economic Cooperation; the Pacific Islands Forum; the Pacific Community; the Commonwealth of Nations;
-                    and the defence and security organisations ANZUS, AUKUS, and the Five Eyes. It is also a major non-NATO ally of the United States.
+                <p>Australia is known for many things, including swathes of tropical beaches, marine reserves,
+                    Aboriginal culture, cute koalas, rolling wine country, and lush rainforests.
+                    <br> Australia, officially the <strong>Commonwealth of Australia</strong>, is a sovereign country
+                    comprising the mainland of the Australian continent, the island of Tasmania, and numerous smaller
+                    islands. Australia is the largest country
+                    by area in Oceania and the world's sixth-largest country. Australia has a highly developed market
+                    economy and one of the highest per capita incomes globally. It is a middle power, and has the
+                    world's thirteenth-highest military expenditure.
+                    It is a member of international groups including the United Nations; the G20; the OECD; the World
+                    Trade Organization; Asia-Pacific Economic Cooperation; the Pacific Islands Forum; the Pacific
+                    Community; the Commonwealth of Nations;
+                    and the defence and security organisations ANZUS, AUKUS, and the Five Eyes. It is also a major
+                    non-NATO ally of the United States.
                 </p>
             </div>
 
@@ -148,7 +170,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -171,11 +196,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
