--- a/dedicated destinations/chola/chola.html
+++ b/dedicated destinations/chola/chola.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/A_collage_of_Great_living_Chola_temples_UNESCO_heritage_site.jpg/1200px-A_collage_of_Great_living_Chola_temples_UNESCO_heritage_site.jpg" alt="" class="slider-img">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/A_collage_of_Great_living_Chola_temples_UNESCO_heritage_site.jpg/1200px-A_collage_of_Great_living_Chola_temples_UNESCO_heritage_site.jpg"
+                    alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -66,7 +68,9 @@
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Meal included</h3>
                 <p></p>
-            </div>Chola inscriptions also detailed the food and how it was prepared. Various records show that they cultivated paddy, sugarcane, banana, brinjal, black gram, cow peas ('karamani') and spinach. Historians say non-vegetarian food such as 'kari
+            </div>Chola inscriptions also detailed the food and how it was prepared. Various records show that they
+            cultivated paddy, sugarcane, banana, brinjal, black gram, cow peas ('karamani') and spinach. Historians say
+            non-vegetarian food such as 'kari
             choru' (rice and meat cooked together) was common.
 
             <div class="features">
@@ -91,14 +95,18 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.9133996559062!2d79.47649007783696!3d12.118077657503711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a534f95d1a46b3d%3A0xf82f91ad60deaa95!2sChola%20Temple!5e0!3m2!1sen!2sin!4v1717393454192!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.9133996559062!2d79.47649007783696!3d12.118077657503711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a534f95d1a46b3d%3A0xf82f91ad60deaa95!2sChola%20Temple!5e0!3m2!1sen!2sin!4v1717393454192!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    The Great Living Chola Temples is a UNESCO World Heritage Site designation for a group of Chola dynasty era Hindu temples in the Indian state of Tamil Nadu. The temple at Thanjavur was added in the list in 1987, while the other two temples were added
+                    The Great Living Chola Temples is a UNESCO World Heritage Site designation for a group of Chola
+                    dynasty era Hindu temples in the Indian state of Tamil Nadu. The temple at Thanjavur was added in
+                    the list in 1987, while the other two temples were added
                     in 2004.
                     <br> Completed between early 11th and the 12th century CE, the monuments include:
                     <br>
@@ -143,7 +151,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -166,11 +177,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
