--- a/dedicated destinations/elephanta/ele.html
+++ b/dedicated destinations/elephanta/ele.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://t2.gstatic.com/licensed-image?q=tbn:ANd9GcTFnV6sjgqd1sRo5uW6RU8jUZ0N503m-XVXjUUeqAuWvEuqR718HUAG_Pah_P0dDoiZ" alt="" class="slider-img">
+                <img src="https://t2.gstatic.com/licensed-image?q=tbn:ANd9GcTFnV6sjgqd1sRo5uW6RU8jUZ0N503m-XVXjUUeqAuWvEuqR718HUAG_Pah_P0dDoiZ"
+                    alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -65,7 +67,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Meal included</h3>
-                <p>Enjoy pure, fresh, vegetarian cuisine at the Premvati Food Court. In the ambience of the caves of Ajanta, enjoy Indian or Continental food of your choice.</p>
+                <p>Enjoy pure, fresh, vegetarian cuisine at the Premvati Food Court. In the ambience of the caves of
+                    Ajanta, enjoy Indian or Continental food of your choice.</p>
             </div>
 
             <div class="features">
@@ -90,17 +93,26 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.277518004728!2d72.9289114749744!3d18.963347382218227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c5307da3602f%3A0xf4ab181b1aaef53f!2sElephanta%20Caves!5e0!3m2!1sen!2sin!4v1717319606291!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.277518004728!2d72.9289114749744!3d18.963347382218227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c5307da3602f%3A0xf4ab181b1aaef53f!2sElephanta%20Caves!5e0!3m2!1sen!2sin!4v1717319606291!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    The Elephanta Caves are located in Western India on Elephanta Island (otherwise known as the Island of Gharapuri), which features two hillocks separated by a narrow valley. The small island is dotted with numerous ancient archaeological remains that are
-                    the sole testimonies to its rich cultural past. These archaeological remains reveal evidence of occupation from as early as the 2nd century BC.
-                    <br> <br> The rock-cut Elephanta Caves were constructed about the mid-5th to 6th centuries AD. The most important among the caves is the great Cave 1, which measures 39 metres from the front entrance to the back. In plan, this cave
-                    in the western hill closely resembles Dumar Lena cave at Ellora, in India. The main body of the cave, excluding the porticos on the three open sides and the back aisle, is 27 metres square and is supported by rows of six columns each.
+                    The Elephanta Caves are located in Western India on Elephanta Island (otherwise known as the Island
+                    of Gharapuri), which features two hillocks separated by a narrow valley. The small island is dotted
+                    with numerous ancient archaeological remains that are
+                    the sole testimonies to its rich cultural past. These archaeological remains reveal evidence of
+                    occupation from as early as the 2nd century BC.
+                    <br> <br> The rock-cut Elephanta Caves were constructed about the mid-5th to 6th centuries AD. The
+                    most important among the caves is the great Cave 1, which measures 39 metres from the front entrance
+                    to the back. In plan, this cave
+                    in the western hill closely resembles Dumar Lena cave at Ellora, in India. The main body of the
+                    cave, excluding the porticos on the three open sides and the back aisle, is 27 metres square and is
+                    supported by rows of six columns each.
 
                 </p>
             </div>
@@ -139,7 +151,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -162,11 +177,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
