--- a/dedicated destinations/Manali/m.html
+++ b/dedicated destinations/Manali/m.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://t1.gstatic.com/licensed-image?q=tbn:ANd9GcSg50AFbadyWm-pye4CU2ZVFuA2gWOGhg6PKKHGIdRl7zRP6ONh2kqP72trtTF2oTY4" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="https://t1.gstatic.com/licensed-image?q=tbn:ANd9GcSg50AFbadyWm-pye4CU2ZVFuA2gWOGhg6PKKHGIdRl7zRP6ONh2kqP72trtTF2oTY4"
+                    alt="trip" height="250" width="45" alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -66,7 +68,9 @@
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Food Items</h3>
                 <p>
-                    Siddu is one of the famous street foods among locals in Manali. It is prepared with traditional methods using wheat flour & stuffed mutton Its half-moon-shaped pie gives a unique look to its consumers. With its unique essence & mountain taste, Siddu is
+                    Siddu is one of the famous street foods among locals in Manali. It is prepared with traditional
+                    methods using wheat flour & stuffed mutton Its half-moon-shaped pie gives a unique look to its
+                    consumers. With its unique essence & mountain taste, Siddu is
                     a typical food made in every household in Manali
                 </p>
 
@@ -96,18 +100,30 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26997.53251957052!2d77.16652018451926!3d32.239470379110635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39048708163fd03f%3A0x8129a80ebe5076cd!2sManali%2C%20Himachal%20Pradesh!5e0!3m2!1sen!2sin!4v1718180227792!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26997.53251957052!2d77.16652018451926!3d32.239470379110635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39048708163fd03f%3A0x8129a80ebe5076cd!2sManali%2C%20Himachal%20Pradesh!5e0!3m2!1sen!2sin!4v1718180227792!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    Manali is a high-altitude Himalayan resort town in India’s northern Himachal Pradesh state. It has a reputation as a backpacking center and honeymoon destination. Set on the Beas River, it’s a gateway for skiing in the Solang Valley and trekking in Parvati
-                    Valley. It's also a jumping-off point for paragliding, rafting and mountaineering in the Pir Panjal mountains, home to 4,000m-high Rohtang Pass. <br> Manali is a town, near Kullu town in Kullu district in the Indian
-                    state of Himachal Pradesh. It is situated in the northern end of the Kullu Valley, formed by the Beas River. The town is located in the Kullu district, approximately 270 kilometres (170 mi) north of the state capital of Shimla and
-                    544 kilometres (338 mi) northeast of the national capital of New Delhi. With a population of 8,096 people recorded in the 2011 Indian census Manali is the beginning of an ancient trade route through Lahaul (H.P.) and Ladakh, over the
-                    Karakoram Pass and onto Yarkand and Hotan in the Tarim Basin of China. Manali is a popular tourist destination in India and serves as the gateway to the Lahaul and Spiti district as well as the city of Leh in Ladakh.
+                    Manali is a high-altitude Himalayan resort town in India’s northern Himachal Pradesh state. It has a
+                    reputation as a backpacking center and honeymoon destination. Set on the Beas River, it’s a gateway
+                    for skiing in the Solang Valley and trekking in Parvati
+                    Valley. It's also a jumping-off point for paragliding, rafting and mountaineering in the Pir Panjal
+                    mountains, home to 4,000m-high Rohtang Pass. <br> Manali is a town, near Kullu town in Kullu
+                    district in the Indian
+                    state of Himachal Pradesh. It is situated in the northern end of the Kullu Valley, formed by the
+                    Beas River. The town is located in the Kullu district, approximately 270 kilometres (170 mi) north
+                    of the state capital of Shimla and
+                    544 kilometres (338 mi) northeast of the national capital of New Delhi. With a population of 8,096
+                    people recorded in the 2011 Indian census Manali is the beginning of an ancient trade route through
+                    Lahaul (H.P.) and Ladakh, over the
+                    Karakoram Pass and onto Yarkand and Hotan in the Tarim Basin of China. Manali is a popular tourist
+                    destination in India and serves as the gateway to the Lahaul and Spiti district as well as the city
+                    of Leh in Ladakh.
 
 
 
@@ -148,7 +164,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -171,11 +190,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
