--- a/dedicated destinations/Red_Fort/red.html
+++ b/dedicated destinations/Red_Fort/red.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="swapnil-deshpandey-nHTj_6Boxdg-unsplash.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="swapnil-deshpandey-nHTj_6Boxdg-unsplash.jpg" alt="trip" height="250" width="45" alt=""
+                    class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -65,14 +67,21 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Meal included</h3>
-                <p>The fort has been a silent witness to feasts and banquets during the Mughal era where royal chefs would prepare luxurious meals with exotic spices, dried fruits, and flavored rice - a style that has trickled down to modern-day Delhi's
+                <p>The fort has been a silent witness to feasts and banquets during the Mughal era where royal chefs
+                    would prepare luxurious meals with exotic spices, dried fruits, and flavored rice - a style that has
+                    trickled down to modern-day Delhi's
                     cuisine.
                     <br>
 
                     <strong>Some Meals you must Try</strong>
-                    <br> Chole Bhature (Veg): A quintessential Punjabi dish consisting of spicy chickpeas and deep-fried bread. <br> Aloo Tikki (Veg): Fried potato patties often served with chutneys and chickpeas.<br> Rajma Chawal (Veg): A comfort food
-                    made from red kidney beans in a thick gravy with steamed rice.<br> Paneer Tikka (Veg): Skewered and grilled chunks of cottage cheese marinated in spices and yogurt.<br> Dal Makhani (Veg): A creamy lentil dish cooked with butter and
-                    cream, loved for its rich flavor.</p>
+                    <br> Chole Bhature (Veg): A quintessential Punjabi dish consisting of spicy chickpeas and deep-fried
+                    bread. <br> Aloo Tikki (Veg): Fried potato patties often served with chutneys and chickpeas.<br>
+                    Rajma Chawal (Veg): A comfort food
+                    made from red kidney beans in a thick gravy with steamed rice.<br> Paneer Tikka (Veg): Skewered and
+                    grilled chunks of cottage cheese marinated in spices and yogurt.<br> Dal Makhani (Veg): A creamy
+                    lentil dish cooked with butter and
+                    cream, loved for its rich flavor.
+                </p>
             </div>
 
             <div class="features">
@@ -97,18 +106,28 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.118871846584!2d77.23844537528996!3d28.656159175651783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfce26ec085ef%3A0x441e32f4fa5002fb!2sRed%20Fort!5e0!3m2!1sen!2sin!4v1717407225226!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.118871846584!2d77.23844537528996!3d28.656159175651783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfce26ec085ef%3A0x441e32f4fa5002fb!2sRed%20Fort!5e0!3m2!1sen!2sin!4v1717407225226!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    The <strong> Red Fort or Lal Qila</strong> is a historic fort in the Old Delhi neighbourhood of Delhi, India, that historically served as the main residence of the Mughal emperors. Emperor Shah Jahan commissioned construction of the
-                    Red Fort on 12 May 1639, when he decided to shift his capital from Agra to Delhi. Originally red and white, its design is credited to architect Ustad Ahmad Lahori, who also constructed the Taj Mahal. The fort represents the peak in
-                    the Mughal architecture under Shah Jahan and combines Persian palace architecture with Indian traditions.
-                    <br> <br> The fort was plundered of its artwork and jewels during Nader Shah's invasion of the Mughal Empire in 1739. Most of the fort's marble structures were subsequently demolished by the British following the Indian Rebellion of
-                    1857. The fort's defensive walls were largely undamaged, and the fortress was subsequently used as a garrison.
+                    The <strong> Red Fort or Lal Qila</strong> is a historic fort in the Old Delhi neighbourhood of
+                    Delhi, India, that historically served as the main residence of the Mughal emperors. Emperor Shah
+                    Jahan commissioned construction of the
+                    Red Fort on 12 May 1639, when he decided to shift his capital from Agra to Delhi. Originally red and
+                    white, its design is credited to architect Ustad Ahmad Lahori, who also constructed the Taj Mahal.
+                    The fort represents the peak in
+                    the Mughal architecture under Shah Jahan and combines Persian palace architecture with Indian
+                    traditions.
+                    <br> <br> The fort was plundered of its artwork and jewels during Nader Shah's invasion of the
+                    Mughal Empire in 1739. Most of the fort's marble structures were subsequently demolished by the
+                    British following the Indian Rebellion of
+                    1857. The fort's defensive walls were largely undamaged, and the fortress was subsequently used as a
+                    garrison.
 
 
 
@@ -150,7 +169,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -173,11 +195,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
