--- a/dedicated-destinations/Dubai/start.html
+++ b/dedicated-destinations/Dubai/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462563.03265639505!2d54.89783594696621!3d25.07565841149872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43496ad9c645%3A0xbde66e5084295162!2sDubai%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1706387511090!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462563.03265639505!2d54.89783594696621!3d25.07565841149872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43496ad9c645%3A0xbde66e5084295162!2sDubai%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1706387511090!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <!-- Menu Container -->
             <div class="w3-container" id="menu">
@@ -117,12 +122,23 @@
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
                         <p class="w3-text-grey">
-                            Dubai is characterized by its opulence, modernity, and diverse attractions, making it one of the most sought-after destinations in the world. Renowned for its futuristic skyline, luxurious shopping malls, and extravagant entertainment options, Dubai offers
-                            a unique blend of traditional Arabian culture and contemporary amenities. One of the city's most iconic attractions is the Burj Khalifa, the world's tallest building, which offers breathtaking views of the city from its observation
-                            decks. The Dubai Mall, adjacent to the Burj Khalifa, is a shopper's paradise, featuring high-end retailers, entertainment options like an indoor ice skating rink and a large aquarium, and a wide array of dining experiences.
-                            Dubai is also famous for its man-made islands, such as the Palm Jumeirah and The World islands, which offer luxurious resorts, upscale residences, and pristine beaches.
-                            <br> <br> Visitors can indulge in water sports, relax at exclusive beach clubs, or enjoy fine dining overlooking the Arabian Gulf. For those interested in culture and history, Dubai's old town, including the Al Fahidi Historical
-                            Neighborhood and the Dubai Museum, offers a glimpse into the city's past as a trading hub. The traditional souks (markets), such as the Gold Souk and the Spice Souk, provide an authentic Arabian shopping experience where visitors
+                            Dubai is characterized by its opulence, modernity, and diverse attractions, making it one of
+                            the most sought-after destinations in the world. Renowned for its futuristic skyline,
+                            luxurious shopping malls, and extravagant entertainment options, Dubai offers
+                            a unique blend of traditional Arabian culture and contemporary amenities. One of the city's
+                            most iconic attractions is the Burj Khalifa, the world's tallest building, which offers
+                            breathtaking views of the city from its observation
+                            decks. The Dubai Mall, adjacent to the Burj Khalifa, is a shopper's paradise, featuring
+                            high-end retailers, entertainment options like an indoor ice skating rink and a large
+                            aquarium, and a wide array of dining experiences.
+                            Dubai is also famous for its man-made islands, such as the Palm Jumeirah and The World
+                            islands, which offer luxurious resorts, upscale residences, and pristine beaches.
+                            <br> <br> Visitors can indulge in water sports, relax at exclusive beach clubs, or enjoy
+                            fine dining overlooking the Arabian Gulf. For those interested in culture and history,
+                            Dubai's old town, including the Al Fahidi Historical
+                            Neighborhood and the Dubai Museum, offers a glimpse into the city's past as a trading hub.
+                            The traditional souks (markets), such as the Gold Souk and the Spice Souk, provide an
+                            authentic Arabian shopping experience where visitors
                             can haggle for gold, spices, textiles, and more.
 
 
@@ -225,7 +241,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -248,11 +267,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
