--- a/dedicated-destinations/Goa/start.html
+++ b/dedicated-destinations/Goa/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d492479.7588122776!2d73.6770378314509!3d15.349486366342553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbfba106336b741%3A0xeaf887ff62f34092!2sGoa!5e0!3m2!1sen!2sin!4v1706389282185!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d492479.7588122776!2d73.6770378314509!3d15.349486366342553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbfba106336b741%3A0xeaf887ff62f34092!2sGoa!5e0!3m2!1sen!2sin!4v1706389282185!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <!-- Menu Container -->
@@ -119,12 +124,23 @@
 
                         <p class="w3-text-grey">
 
-                            Goa is India’s smallest state by its geographical area and the fourth smallest by population. The state has been a very important historical and cultural centre since ancient times. In a Hindu scripture Mahabharata it is referred as Gopakpattan or Gomant
-                            and in Sutra- Samhita it was mentioned as Govapuri. <br><br> Located on India’s West coast, Goa is a former Portuguese colony with prolific history. The state has unique blend of Indian and Portuguese
-                            culture, art and architecture that pulls approx 2.5 millions (wiki) tourists every year. And hence Goa is visibly different from the rest of India.<br><br> The magical land of Goa is a land of celebrations and festivities.
-                            Snuggled in the Konkan Coast Belt, It has a long coastline of approx 100 kilometers. Goa is primarily known for its beautiful beaches which are engrossed with oscillating palm trees and an astonishing nightlife. It is a wonderful
-                            place embraced by joy & happiness only. However, apart from beaches there is much more in Goa.<br><br> It is such a destination that combines the charm of the old world fashion with exoticism of the new age. And this is the
-                            reason why Goa has always been visited by a huge number of national and international tourists each year.
+                            Goa is India’s smallest state by its geographical area and the fourth smallest by
+                            population. The state has been a very important historical and cultural centre since ancient
+                            times. In a Hindu scripture Mahabharata it is referred as Gopakpattan or Gomant
+                            and in Sutra- Samhita it was mentioned as Govapuri. <br><br> Located on India’s West coast,
+                            Goa is a former Portuguese colony with prolific history. The state has unique blend of
+                            Indian and Portuguese
+                            culture, art and architecture that pulls approx 2.5 millions (wiki) tourists every year. And
+                            hence Goa is visibly different from the rest of India.<br><br> The magical land of Goa is a
+                            land of celebrations and festivities.
+                            Snuggled in the Konkan Coast Belt, It has a long coastline of approx 100 kilometers. Goa is
+                            primarily known for its beautiful beaches which are engrossed with oscillating palm trees
+                            and an astonishing nightlife. It is a wonderful
+                            place embraced by joy & happiness only. However, apart from beaches there is much more in
+                            Goa.<br><br> It is such a destination that combines the charm of the old world fashion with
+                            exoticism of the new age. And this is the
+                            reason why Goa has always been visited by a huge number of national and international
+                            tourists each year.
 
 
 
@@ -219,7 +235,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -242,11 +261,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
